dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__idle_wheel__send_idle_wheel_reschedules_active_context.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=1 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=0 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=0 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.receiver variant=task.wheel_drain value=1 op="counter.add"
0:00:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.drain value=1 op="queue.dequeue_n" op="counter.add"
0:00:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.sub label=test.idle_wheel.depth delta=1 value=-1 op="queue.dequeue_n" op="gauge.sub"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.dequeue_n count=1 depth=0 op="queue.dequeue_n"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.sender variant=task.send_idle_wheel_drain value=1 op="counter.add"
0:00:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.enq value=1 op="queue.enqueue" op="counter.add"
0:00:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.add label=test.idle_wheel.depth delta=1 value=0 op="queue.enqueue" op="gauge.add"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.enqueue count=1 depth=0 op="queue.enqueue"
0:00:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: summary.record_value label=test.idle_wheel.depth_dist value=0 op="queue.enqueue" op="summary.record_value"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=idle.send.rescheduled value=1 op="counter.add"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=1 op="summary.record_value"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=0 op="summary.record_value"
0:00:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.receiver variant=task.wheel_drain value=1 op="counter.add"
0:01:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.drain value=1 op="queue.dequeue_n" op="counter.add"
0:01:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.sub label=test.idle_wheel.depth delta=1 value=-1 op="queue.dequeue_n" op="gauge.sub"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.dequeue_n count=1 depth=0 op="queue.dequeue_n"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.sender variant=task.send_idle_wheel_drain value=1 op="counter.add"
0:01:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.enq value=1 op="queue.enqueue" op="counter.add"
0:01:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.add label=test.idle_wheel.depth delta=1 value=0 op="queue.enqueue" op="gauge.add"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.enqueue count=1 depth=0 op="queue.enqueue"
0:01:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: summary.record_value label=test.idle_wheel.depth_dist value=0 op="queue.enqueue" op="summary.record_value"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=idle.send.rescheduled value=1 op="counter.add"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=1 op="summary.record_value"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=0 op="summary.record_value"
0:01:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.idle_wheel.next_poll_latency variant=send.0 op="timer.record"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.idle_wheel.time variant=send.0 op="timer.start_at"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.receiver variant=task.wheel_drain value=1 op="counter.add"
0:01:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=test.idle_wheel.drain value=1 op="queue.dequeue_n" op="counter.add"
0:01:30.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.sub label=test.idle_wheel.depth delta=1 value=-1 op="queue.dequeue_n" op="gauge.sub"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.dequeue_n count=1 depth=0 op="queue.dequeue_n"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=idle.send.expired value=1 op="counter.add"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=idle.send.lifetime variant=send.0 op="timer.record"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.idle_wheel.drained variant=send.0 value=0 op="summary.record_value"
0:01:30.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.idle_wheel.time variant=send.0 op="timer_guard.record"
